<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>


  <groupId>com.github.loboevolution</groupId>
  <artifactId>lobo-evolution-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <packaging>pom</packaging>

  <name>LoboEvolution</name>
  <description>A pure Java web browser and RIA.</description>

  <url></url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL), version 2.1</name>
      <url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
    </license>
  </licenses>

  <modules>
    <module>Common</module>
    <module>HTML_Renderer</module>
    <module>JWebContentExtension</module>
    <module>parser</module>
    <module>Platform_Core</module>
    <module>Platform_Public_API</module>
    <module>Primary_Extension</module>
  </modules>

  <build>
    <plugins>
      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>
